--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * FIKO 🐸 v0.5.8 (https://fiko.rokma.rocks)
+ * FIKO 🐸 v0.5.10 (https://fiko.rokma.rocks)
  * 2024 CLASSLESS BLACK & WHITE CSS FRAMEWORK LIBRARY
  * MIT License | https: //github.com/toybreaker/fiko
  * Copyright 2023 Toybreaker - Licensed under MIT
@@ -118,12 +118,12 @@
   }
 
   html {
-    font-size: 100%;
+    /* font-size: 100%; */
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
 
     > * {
-      font-size: unset;
+    font-size: unset;
     }
   }
 
@@ -152,7 +152,7 @@
   }
 
   a {
-    background-color: transparent;
+    /* background-color: transparent; */
   }
 
   button,
@@ -187,8 +187,9 @@
 @layer root {
   :root {
     /* colours */
-    --color-white: #ffffff;
-    --color-black: #000000;
+    --color-white: rgba(255, 255, 255, 1);
+    --color-black: rgba(0, 0, 0, 1);
+
 
     /* colour's modes */
     --light-mode: var(--color-white);
@@ -198,17 +199,18 @@
   /* Initial styles assuming light theme */
   body[data-theme="light"] {
     /* set the CURRENT colours: */
-    --currentBG: var(--light-mode);
+    --currentBG: var(--color-white);
     --currentTXT: var(--color-black);
     /* apply the CURRENT colours: */
     background-color: var(--currentBG);
     color: var(--currentTXT);
+
   }
 
   /* When data-theme is set to dark */
   body[data-theme="dark"] {
     /* set the CURRENT colours: */
-    --currentBG: var(--dark-mode);
+    --currentBG: var(--color-black);
     --currentTXT: var(--color-white);
     /* apply the CURRENT colours: */
     background-color: var(--currentBG);
@@ -216,8 +218,13 @@
   }
 
   :root {
+    /* auto changing color transparent */
+
+
+    --accordion-open-summary-color: var(--currentTXTtrasparent)
+
     /* spacing & borders */
-    --space: calc(1dvh + 1dvw / 2);
+    --space: 1rem;
     --spaceLR: 5dvw;
     --spaceTB: 2dvh;
     --border: 2px;
@@ -238,13 +245,13 @@
 
     /* ICONS */
 
-    --icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(255, 255, 255)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
+    --icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
 
     --icon-minus: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(255, 255, 255)' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
 
-    --icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+    --icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
 
-    --icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
+    --icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
 
     --icon-time: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(136, 145, 164)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Ccircle cx='12' cy='12' r='10'%3E%3C/circle%3E%3Cpolyline points='12 6 12 12 16 14'%3E%3C/polyline%3E%3C/svg%3E");
 
@@ -265,6 +272,7 @@
     font-family: var(--font-family);
   }
   small {
+    font-size: 77%;
   }
 
   blockquote {
@@ -396,12 +404,16 @@
   [dir="rtl"] {
     direction: rtl;
   }
+
+
+
 }
 
 /* ||| Toggle Layer ||| */
 @layer toggle {
   .switcher {
-    position: fixed;
+    background-color: var(--currentBG);
+    /* position: fixed; */
     z-index: 1000;
     right: var(--space);
     bottom: var(--space);
@@ -468,11 +480,15 @@
     transition: max-width var(--transition), padding var(--transition);
   }
 
-  .switcher label:hover {
+  .switcher label {
+    user-select: none;
+    &:hover {
     cursor: pointer;
   }
 
-  #theme-toggle {
+  }
+
+  #toggle-theme {
     display: none;
   }
 }
@@ -502,6 +518,7 @@
   nav,
   nav ul {
     display: flex;
+    flex-wrap: wrap
   }
 
   nav {
@@ -587,6 +604,7 @@
   th,
   td {
     padding: calc(var(--space) / 2) var(--space);
+    width: fit-content;
     border-bottom: var(--border-width) solid var(--table-border-color);
     background-color: var(--background-color);
     color: var(--color);
@@ -607,7 +625,7 @@
   }
 
   img {
-    max-width: 100%;
+    width: auto;
     height: auto;
     border-style: none;
   }
@@ -671,6 +689,9 @@
     margin: 0;
     padding: 0;
     overflow-x: auto;
+    img {
+      max-inline-size: 200%;
+    }
   }
   figure figcaption {
     padding: calc(var(--spaceTB) * 0.5) 0;
@@ -688,7 +709,8 @@
     color: inherit;
   }
 
-  /* Button */
+  /* Button v2*/
+
   button {
     margin: 0;
     overflow: visible;
@@ -709,9 +731,9 @@
   [type="button"],
   [type="file"]::file-selector-button,
   [role="button"] {
-    --background-color: var(--primary-background);
-    --border-color: var(--primary-border);
-    --color: var(--primary-inverse);
+    --background-color: var(--currentBG);
+    --border-color: var(--currentTXT);
+    --color: var(--currentTXT);
     --box-shadow: var(--button-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
     padding: var(--form-element-spacing-vertical)
       var(--form-element-spacing-horizontal);
@@ -763,16 +785,23 @@
   [type="submit"],
   [type="reset"],
   [type="button"] {
-    margin-bottom: var(--space);
+    margin-bottom: var(--spacing);
   }
 
+  :is(button, [type="submit"], [type="button"], [role="button"]).secondary,
   [type="reset"],
   [type="file"]::file-selector-button {
-    --background-color: var(--secondary);
-    --border-color: var(--secondary);
+    --background-color: var(--secondary-background);
+    --border-color: var(--secondary-border);
     --color: var(--secondary-inverse);
     cursor: pointer;
   }
+  :is(button, [type="submit"], [type="button"], [role="button"]).secondary:is(
+      [aria-current],
+      :hover,
+      :active,
+      :focus
+    ),
   [type="reset"]:is([aria-current], :hover, :active, :focus),
   [type="file"]::file-selector-button:is(
       [aria-current],
@@ -780,13 +809,99 @@
       :active,
       :focus
     ) {
-    --background-color: var(--secondary-hover);
-    --border-color: var(--secondary-hover);
+    --background-color: var(--secondary-hover-background);
+    --border-color: var(--secondary-hover-border);
+    --color: var(--secondary-inverse);
   }
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).secondary:focus,
   [type="reset"]:focus,
   [type="file"]::file-selector-button:focus {
     --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0)),
       0 0 0 var(--outline-width) var(--secondary-focus);
+  }
+
+  :is(button, [type="submit"], [type="button"], [role="button"]).contrast {
+    --background-color: var(--currentTXT);
+    --border-color: var(--currentBG);
+    --color: var(--currentBG);
+  }
+  :is(button, [type="submit"], [type="button"], [role="button"]).contrast:is(
+      [aria-current],
+      :hover,
+      :active,
+      :focus
+    ) {
+    --background-color: var(--currentBG);
+    --border-color: var(--currentTXT);
+    --color: var(--currentTXT);
+  }
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).contrast:focus {
+    --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0)),
+      0 0 0 var(--outline-width) var(--currentTXT);
+  }
+
+  :is(button, [type="submit"], [type="button"], [role="button"]).outline,
+  [type="reset"].outline {
+    --background-color: transparent;
+    --color: var(--currentTXT);
+    --border-color: currentColor;
+  }
+  :is(button, [type="submit"], [type="button"], [role="button"]).outline:is(
+      [aria-current],
+      :hover,
+      :active,
+      :focus
+    ),
+  [type="reset"].outline:is([aria-current], :hover, :active, :focus) {
+    --background-color: transparent;
+    --color: var(--currentTXTtrasparent);
+  }
+
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).outline.secondary,
+  [type="reset"].outline {
+    --color: var(--currentTXTtrasparent);
+    --border-color: currentColor;
+  }
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).outline.secondary:is([aria-current], :hover, :active, :focus),
+  [type="reset"].outline:is([aria-current], :hover, :active, :focus) {
+    --color: var(--currentTXTtrasparent);
+  }
+
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).outline.contrast {
+    --color: var(--currentTXTtrasparent);
+  }
+  :is(
+      button,
+      [type="submit"],
+      [type="button"],
+      [role="button"]
+    ).outline.contrast:is([aria-current], :hover, :active, :focus) {
+    --color: var(--currentTXTtrasparent);
   }
 
   :where(
@@ -812,7 +927,7 @@
   details {
     display: block;
     margin-bottom: var(--space);
-    border-bottom: var(--border) solid var(--currentTXT);
+    border-bottom: var(--border) solid var(--currentTXTtrasparent);
 
     & summary {
       line-height: 2;
@@ -856,69 +971,11 @@
       }
     }
 
-    /* summary:not([role]) {
-      color: var(--currentTXT);
-    } */
-
-    /* summary::-webkit-details-marker {
-      display: none;
-    } */
-
-    /* summary::marker {
-      display: none;
-    } */
-
-    /* summary::-moz-list-bullet {
-      list-style-type: none;
-    } */
-
-    /* summary::after {
-      display: block;
-      width: 1rem;
-      height: 1rem;
-      -webkit-margin-start: calc(var(--space) * 0.5);
-      margin-inline-start: calc(var(--space) * 0.5);
-      float: right;
-      transform: rotate(-90deg);
-      background-image: var(--icon-chevron);
-      background-position: right center;
-      background-size: 1rem auto;
-      background-repeat: no-repeat;
-      content: "";
-      transition: transform var(--transition);
-    } */
-
-    /* summary:focus {
-      outline: none;
-
-      &:not([role]) {
-        color: var(--currentTXT);
-      }
-    } */
-
-    /* summary:focus:not([role]) {
-      color: var(--currentTXT);
-    } */
-
     summary:focus-visible:not([role]) {
       outline: var(-border) solid var(--currentTXT);
       outline-offset: calc(var(--space) * 0.5);
       color: var(--currentTXT);
     }
-
-    /*
-    summary[role=button] {
-      width: 100%;
-      text-align: left;
-
-      &::after {
-        height: calc(1rem * var(--line-height));
-      }
-    } */
-
-    /* summary[role=button]::after {
-      height: calc(1rem * var(--line-height));
-    } */
   }
 
   summary::after {
